kubernetes-conf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumidor-twitches-deployment
  labels: 
    app: consumidor-twitches
spec:
  replicas: 1
  selector:
      matchLabels:
        app: consumidor-twitches
  template:
    metadata:
      labels:
        app: consumidor-twitches
    spec:
      containers:
      - name: consumidor-twitches
        image: pupio/tcc:consumidor-twitches-insercao-v4
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chaos-consumidor-twitches-deployment
  labels: 
    app: chaos-consumidor-twitches
spec:
  replicas: 1
  selector:
      matchLabels:
        app: chaos-consumidor-twitches
  template:
    metadata:
      labels:
        app: chaos-consumidor-twitches
    spec:
      containers:
      - name: chaos-consumidor-twitches
        image: pupio/tcc:consumidor-twitches-insercao-v4
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twitter-api-kafka-deployment
  labels: 
    app: twitter-api-kafka
spec:
  replicas: 1
  selector:
      matchLabels:
        app: twitter-api-kafka
  template:
    metadata:
      labels:
        app: twitter-api-kafka
    spec:
      containers:
      - name: twitter-api-kafka
        image: pupio/tcc:twitter-api-kafka
        ports:
        - containerPort: 80
