kubernetes-conf/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: pupio.paulo.tcc
    http:
      paths:
        - path: / 
          backend:
            serviceName: webapp-svc
            servicePort: 80
